--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
 
 ext {
     supportVersion = '1.0.0-alpha3'
+    rxJavaVersion = '2.1.16'
+    rxAndroidVersion = '2.0.2'
 }
 
 dependencies {
@@ -31,6 +33,10 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "com.google.android.material:material:$supportVersion" // todo update version
+
+    // RxJava
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
